--- a/serial/paper9/paper7.tex
+++ b/serial/paper9/paper7.tex
@@ -3,7 +3,7 @@
 \usepackage{iclr2025_conference}
 \usepackage{times}
 
-%\iclrfinalcopy
+\iclrfinalcopy
 
 % Optional math commands from https://github.com/goodfeli/dlbook_notation.
 \input{math_commands.tex}
@@ -20,11 +20,11 @@
 % as long as the \iclrfinalcopy macro remains commented out below.
 % Non-anonymous submissions will be rejected without review.
 
-\author{Bui Gia Khanh \thanks{Undergraduate student} \\
+\author{Bui Gia Khanh \thanks{Undergraduate student on Bachelor of Physics track.} \\
 Department of Physics\\
 Hanoi University of Science, Vietnam National University\\
 Hanoi, Vietnam\\
-\texttt{\{fujimiyaamane\}@outlook.com} \\
+\texttt{fujimiyaamane@outlook.com} \\
 }
 
 % The \author macro works with any number of authors. There are two commands
@@ -45,7 +45,7 @@ Hanoi, Vietnam\\
 \maketitle
 
 \begin{abstract}
-    Within the limited scope of this paper\footnote{The paper is not finished, this is the latest draft as of \today\ at \currenttime, will be uploaded to at least arxiv later.}, we argue that artificial general intelligence cannot emerge from current neural network paradigms regardless of scale, nor such approach is healthy for the field at present. Drawing on various notions, discussion, present-day development and observations, current debates and critiques, experiments and so on in between philosophy, including Chinese Room Argument and Godelian argument, neuroscientific idea, computer science, the theoretical consideration of artificial intelligence, and learning theory, we address conceptually that neural networks are architecturally insufficient for genuine understanding. They operate as static function approximators of a limited encoding framework - a `sophisticated sponge' exhibiting complex behaviours without structural richness that constitute intelligence. We critique the theoretical foundations the field relies on and created of recent time, for example, an interesting heuristic as \textit{neural scaling law} (for example, \cite{kaplan2020scalinglawsneurallanguage}) made prominent in a wrong way of interpretation, he Universal Approximation Theorem addresses the wrong level of abstraction, and in parts, partially, the question of current architectures lacking dynamic restructuring capabilities. We propose a framework distinguishing existential facilities (computational substrate) from architectural organization (interpretive structures), and outline principles for what genuine machine intelligence would require, and furthermore, an conceptual method of structuralize the richer framework on which the principle of neural network system takes hold. Such is then of conclusion, that the field's repeated AGI predictions fail not from insufficient compute, but from fundamental misunderstanding of what intelligence demands structurally. 
+    Within the limited scope of this paper\footnote{The paper is not finished, this is the latest draft as of \today\ at \currenttime, will be uploaded to at least arxiv later.}, we argue that artificial general intelligence cannot emerge from current neural network paradigms regardless of scale, nor such approach is healthy for the field at present. Drawing on various notions, discussion, present-day development and observations, current debates and critiques, experiments and so on in between philosophy, including Chinese Room Argument and Godelian argument, neuroscientific idea, computer science, the theoretical consideration of artificial intelligence, and learning theory, we address conceptually that neural networks are architecturally insufficient for genuine understanding. They operate as static function approximators of a limited encoding framework - a `sophisticated sponge' exhibiting complex behaviours without structural richness that constitute intelligence. We critique the theoretical foundations the field relies on and created of recent time, for example, an interesting heuristic as \textit{neural scaling law} (for example, \cite{kaplan2020scalinglawsneurallanguage}) made prominent in a wrong way of interpretation, he Universal Approximation Theorem addresses the wrong level of abstraction, and in parts, partially, the question of current architectures lacking dynamic restructuring capabilities. We propose a framework distinguishing existential facilities (computational substrate) from architectural organization (interpretive structures), and outline principles for what genuine machine intelligence would require, and furthermore, a conceptual method of structuralize the richer framework on which the principle of neural network system takes hold. Such is then of conclusion, that the field's repeated AGI predictions fail not from insufficient compute, but from fundamental misunderstanding of what intelligence demands structurally. 
 \end{abstract}
 
 Large Language Model, or LLM (\cite{vaswani2017attention,devlin2019bert,brown2020language,zhao2023llmsurvey,zhao2024llmsurvey2,radford2019language,radford2018improving,raffel2020exploring,touvron2023llama,touvron2023llama2,chowdhery2022palm,ouyang2022training,wei2022chain,kaplan2020scaling,hoffmann2022training,bai2022constitutional}) is one of the most successful, most advanced, and most developed type of model in the current modern machine learning landscape, and of AI (Artificial Intelligence) research at large. Its success has not been lacking, and its reputation and widespread uses have been proved over time. The effect of LLM has been realized, and indeed has been changing the landscape of society in a very much difficult way. Latest model of such architecture, like \cite{openai_gpt5_2025,wang2025capabilitiesgpt5multimodalmedical,openai_inside_gpt5_2025} GPT-5, \cite{guo_deepseek_r1_2025,deepseek_hf_2025}'s DeepSeek AI, \cite{anthropic_claude3_modelcard_2024,anthropic_tracing_thoughts_2025}'s Claude AI, \cite{touvron_llama_2023}'s LLaMA, \cite{chowdhery_palm_2022,anil_palm2_2023}'s PaLM / PaLM-2, and \cite{jiang_mistral7b_2023,mistral_blog_2023}'s Mistral (Mistral-7B), pushed this boundary further and further, and levelling up many tasks and purposes with AI system in practice, and further onward with techniques like \cite{wei2022chain}'s \textit{Chain-of-Thought prompting}, \cite{kaplan2020scaling}'s scaling law, and more (\cite{hoffmann2022training,bai2022constitutional}).
@@ -287,7 +287,7 @@ The main critique also lies in the heart of the current implementation of the ma
     \caption{The conceptual framework of a learning agent (\cite{stanford2018ai}). The agent itself in such framework then indeed, internally `understand' the metric notion of mistake, knowing and then fixing, typical process of which a learning system can be considered.}
 \end{figure}
 
-As such, for those argued that machine can already learn and think, it is instead a very sophisticated pattern matching and statistical inferencing process. In typical situation, model in inference typically can be considered as post-dynamic, since they have been through the process of active construction and optimization, and thus at such point remains static for accurate prediction. Of the argument of which it can `somehow store memory', such can be said of the regime in which RNNs or LSTM, of which takes into account of the encoding, historic and compressed memory influence between passing, and further on of the same principle as TNN (Transformer). The lag and processing speed can be clearly shown with lengthened discussion, as evidence. Furthermore, the process of learning itself is external, meaning that even the basic structural sophistry of which we consider the learning agent is already insufficient with respect to current ML systemand models. Instead, what we are having is in fact a toolset, of which effective in making such model to a certain degree of prediction and statistical inference, but intrinsically cannot learn, and intrinsically black-box. 
+As such, for those argued that machine can already learn and think, it is instead a very sophisticated pattern matching and statistical inferencing process. In typical situation, model in inference typically can be considered as post-dynamic, since they have been through the process of active construction and optimization, and thus at such point remains static for accurate prediction. Of the argument of which it can `somehow store memory', such can be said of the regime in which RNNs or LSTM, of which takes into account of the encoding, historic and compressed memory influence between passing, and further on of the same principle as TNN (Transformer). The lag and processing speed can be clearly shown with lengthened discussion, as evidence. Furthermore, the process of learning itself is external, meaning that even the basic structural sophistry of which we consider the learning agent is already insufficient with respect to current ML system and models. Instead, what we are having is in fact a toolset, of which effective in making such model to a certain degree of prediction and statistical inference, but intrinsically cannot learn, and intrinsically black-box. 
 
 \subsubsection{Architectural Insufficiency}
 
@@ -430,12 +430,24 @@ where $F_{\gamma}(X)$ organizes the different constituent part in cardinality ar
 \end{equation}
 with increased specific direction of increment. This framework a notion of which in general, can be called the \textit{specific constraint chain}, in which a specific toolchain of increment recursive construction is created, from a transformation $\Phi_{i}:\mathcal{P}_{i}\to\mathcal{P}_{i+1}$, thus create a tower of hierarchy of framework. With any self-component extension, for example, at the layer $\mathcal{P}_{L}$ (of which in certain construction as $\mathcal{P}_{2}$), we can define the add-on $\Lambda_{i,X}:\mathcal{P}_{i}\to\mathcal{P}_{i}'$, that modifies the internal structure with added mass or added cardinality, but retain the core principle construct. 
 
-While this is a prototype, it certainly focuses on the main axis of development that would be detrimental to the topic of \textit{interpretability}, capacity, analysis and so on. We can indeed, extend this particular base template of a neuron class to much greater strength, of which address partially concerns in both implementation, and analysis. Type and neuron specification classifies neuron into different \textit{class} of components instead of the mundane functional structure that we currently have, but also individualized and structuralized the \textit{connection, information} and signature aspect of a processing unit. This allows for more grounded expression and composition rule, for example, the complexity metric of individual components of a larger construction of neural network, of which then can be expressed by individual neurons, and such neuron's individual's components. Dynamics works the same, however, it will shift - instead of learning as a back-tracking process, we can express backpropagation as a kind of \textit{internal mechanism} on addition to the working framework, and the components such measures. In all, the framework is not category per se, but a layered analytic machinery of which naturally (or at least intended of) to construct and describe how architecture can emerge from iterated constraints extension of primitive computational units. In essence, we can also treat the framework as to say each $\mathcal{P}_{i}$ to correspond to a functional space of \textit{realizable computation} (as seen in the abstraction to $\mathbb{R}$-algebra at least), and different structural addition. Furthermore, one can also use such framework to either construct from scratch, and also enables of the process for structural optimization, basically, turning the system considered in such framework, into a basis, resource-optimization or construction game, where analytics and structural design are grouped and unified, and also taken into consideration more sophisticatedly as a resource. Such submodules implication can then also contain the \textbf{learning mechanism module}, of which now is intrinsic of the system, and not simply external of a process itself. 
+While this is a prototype, it certainly focuses on the main axis of development that would be detrimental to the topic of \textit{interpretability}, capacity, analysis and so on. We can indeed, extend this particular base template of a neuron class to much greater strength, of which address partially concerns in both implementation, and analysis. Type and neuron specification classifies neuron into different \textit{class} of components instead of the mundane functional structure that we currently have, but also individualized and structuralized the \textit{connection, information} and signature aspect of a processing unit. This allows for more grounded expression and composition rule, for example, the complexity metric of individual components of a larger construction of neural network, of which then can be expressed by individual neurons, and such neuron's individual's components. Dynamics works the same, however, it will shift - instead of learning as a back-tracking process, we can express backpropagation as a kind of \textit{internal mechanism} on addition to the working framework, and the components such measures. In all, the framework is not category per se, but a layered analytic machinery of which naturally (or at least intended of) to construct and describe how architecture can emerge from iterated constraints extension of primitive computational units. In essence, we can also treat the framework as to say each $\mathcal{P}_{i}$ to correspond to a functional space of \textit{realizable computation} (as seen in the abstraction to $\mathbb{R}$-algebra at least), and different structural addition. Furthermore, one can also use such framework to either construct from scratch, and also enables of the process for structural optimization, basically, turning the system considered in such framework, into a basis, resource-optimization or construction game, where analytics and structural design are grouped and unified, and also taken into consideration more sophisticatedly as a resource. Such submodules' implication can then also contain the \textbf{learning mechanism module}, of which now is intrinsic of the system, and not simply external of a process itself. 
 
 Furthermore, the primitive framework itself serves of a detrimental role in expressing system-wide, modelling-style and global specification of the working space. While we speak of hypothesis class $\mathcal{H}$ or $\mathcal{C}$ for example, such class can only infer, usually of specific function class, definitions, requirements, and so on. With this, we can express them both in a set-theoretical way of cardinality and field-extension similar to embedded vector space, and also encoding such as the numerical encoding typically seen in computing system, and structural addition and expression explicitly considered so. The goal is then also to provide a concrete groundwork on conceptually model the system dynamics and its constituent parts, in the face of increasing developmental pace and new architectures floating around from heuristic choices. In similar sense, using only category theory is an ill-advised method to formalize such, and hence we would like to not agree on such stance. Indeed, there are problems and pitfalls, as well as the immaturity of the functional structure itself, but per a prototype, the general conceptual idea of this particular framework is fairly sound, and would be able to provide deeper insight and more sophisticated interpretation, rather than just simple neural network functions before. 
 
-Again, such theory and treatment does not claim to solve the problem directly, as even now it is not elucidated yet if such model can be even feasible of holding certain conceptual works. Instead, what it might do is to extend and allow for the backward construction - by formalize in the sense of restructure the current messy architecture, and enable the incremental construction in both depth and breath of the neural unit concept. If such can be enabled, emergence, percolation, and so on, could be reached in due time. It is then the task to develop such theory toward maturity. 
+Again, such theory and treatment does not claim to solve the problem directly, as even now it is not elucidated yet if such model can be even feasible of holding certain conceptual works. Instead, what it might do is to extend and allow for the backward construction - by formalize in the sense of restructure the current messy architecture, and enable the incremental construction in both depth and breath of the neural unit concept. If such can be enabled, emergence, percolation, and so on, could be reached in due time. It is then the task to develop such theory toward maturity, while still retain backward compatibility toward the simpler and present system. 
 \subsection{The learning theoretic}
+
+The most important theory or rather, functionality of mutation that enables certain model to facilitate dynamic changes, are indeed the theoretical notion of the learning procedure. Toward such end, generalization of the theory itself, and what is meant of the notion that was typically seen, for example, \textit{generalization}, and so on, is in the question for clarification, and both development of such. This section will only outline the basic philosophical thought of the implication of a learning action in the machine-theoretic lens, for further expansion of the topic to be reserved in future works and separated developments. The main goal, however, would be to realize the entire picture of how the learning process is expressed, usually, and what can be gained from such framing. 
+
+What we attempted as learning would be inherently built upon the perspective of a system dynamic. Specifically, we see that we can utilize existing idea, for example, the simple \textit{agent} system in \cite{stanford2018ai} as the critique system. Let us denote the agent of interest as $A$. This agent has the internal mechanism $M$, the sensory $S$ and the action $F$, of which it uses of the operating environment $E$ surrounding of which $S$ can sense, marginally of its intended features. 
+
+The existence of such model can be realized in certain `situation' by the resource it occupies of the existence of such. Under the computationalism approach, such includes \textit{time complexity}, memory allocation, and \textit{structural interpretation} via the native \textit{encoding language} (such is numerical). The observation system of interest includes the resource as the \textit{observations} itself - usually expressed also via the native encoding language itself, attaining the structure choice of the environment - for example, continuous observations or discrete observations that can be isolated of a concrete state. Such observation itself, is governed by the selective rule of the system's environment, of which draw out such result we see of the environment. Those \textit{natural information} are inherently hidden, from the perspective of the agent sensory system itself, or rather of the inherent way of receiving information from the sensory unit configured of choice. Moving on from such, we emphasize the need to clearing out the problem of \textit{existential facility}, and \textit{operational facility} of any given agent system of interest, and thus, also the environment at will. While it can be said that the environment would be less susceptible to such framing, from the perspective of an objective constructivism approach, the environment itself being used on said agent, is within the limit in which the designer (human, etc, intelligent agency), can argue and consider of such. Thereby, there exists existential facilities - those that support such construction and regard of the environment (for example, a physical environment consideration requires the basis of laws of physics for potential framing of such laws) that is procured to the model itself, and thus form the basis of the existential facility thereof. Operational facility comes in hand as the actual functional, observables that exist as object of interest within said environment $E$. The model itself attains such level of existential-operational facilities on itself, however, the existential facilities here form the basis of its construction, while the operational faclities form the basis of its actual process and operations thereof itself. Simply speak, such notion of more naturally applied for an \textit{actionable}, \textit{constructible} system of interest. For the agent itself, computationalism indicts on the property of being constructed on the basis of the computable system, i.e. computers. Thus, it bears constraints, encoding specification, structural mechanism of the computable system that it is based on upon. For example, this can be as we have already mentioned, the need for \textbf{numerical encoding} in modern computing system, the memory and time-constraint of which makes certain operation or specific operation of interest infeasible of the resource sensitive to such computational object ($NP$-hard problems, etc), or the complication in constructing certain architecture or expression of the model agent of interest (for example, a system of language, abstracted to either procedural or OOP, presents architectural abstraction in which can make constructions difficult even within a singular basis of computation). Such makes up how and what can the paradigm, for even the biological neuron abstraction can take within the respect of such computational system, reduced to an input-and-activation unit, or later on where the more computably-optimized schema is the layering scheme. Such is then can be linked to the operational facilities, of which contains two separate entities of consideration - the mass, or rather, \textbf{facilities}, and the \textbf{process}, of which considers the operational itself of the agent. 
+
+Inherently, we see there exists two internal mechanisms of interest. One, belongs to the model itself, now we denote $M_{A}$, and one is the mechanism, or the law of which observations in $E$ is observed, denoted $M_{E}$.  
+
+\section{Conclusion}
+
+\section{Future works}
 
 \clearpage
 
@@ -454,7 +466,7 @@ Somewhat, in a way or another, a solution can be reached at least in terms of in
 
 In fundamental neuroscience, one of the main question, that was answered figuratively and conceptually, is the question about the \textbf{merit of existence} of a separated organ that eventually, will exhibit controlling behaviours and might up to the point of intelligent behaviours. That is, it raises that 
 \begin{quote}
-    Protists and the simplest multicellular animals (sponges) display ingestive, defensive, reproductive, and other behaviors without any nervous system whatsoever, raising the question: what is the adaptive \textbf{value} of adding a nervous system to an organism?
+    Protists and the simplest multicellular animals (sponges) display ingestive, defensive, reproductive, and other behaviours without any nervous system whatsoever, raising the question: what is the adaptive \textbf{value} of adding a nervous system to an organism?
 \end{quote}
 
 This point is, as it might sound, dilligently enough is very strong. We study intelligence as the essential part to search and create generally, a learnable system, adaptable system, and rational system, but to \textit{which stage}, \textit{which layers} and which \textit{form} would this be classified into? Are our systems generally similar to the Proties and multicellular animals, or have advanced to a greater abstraction level? 
@@ -495,6 +507,8 @@ Then what would be of the Chinese Room Argument that is worth it to dissect? Wel
 
 But more than that, what constitute the notion of understanding? Taken only from the setting of the thought experiment, we cannot do but deceptively assume that understanding a language is similar to giving it certain ruleset to transfer from this word to others word only. By that, converting from base-2 to base-10 works the same - you know how to do it, yet there are things that constitute the philosophical, higher-level notion of 'understanding' in such that allows you to actually understand the conversion - otherwise, the conversion is a blind matching. In fact, given the setting, would a conversion rulebook exists for such language? Language is, by itself, a very high-level concept. Translating from text to texts requires it not only to provide the definition matching, which could be reasonably identified by such notion like the rulebook mention, but the interpretation of the string is dictated by the logic of the language - the context in which it appears, the logical conformation that it contributes, the grammatical structure that makes sense of what is said and what is transferred, and else. Language itself, is a medium of information exchange, by one of its definition. A conversion does not constitute an understanding. And if the argument going back and forth is that Searl can somehow figure it out the patterns mean something, then it violates what I called the \textit{principle of externality} - the 'lower components' up to a given point in which the \textit{law of recursive immergence} does (not) apply, cannot implement its higher constructions. Then, the Chinese Room Argument can be interpreted, in somewhat meagre form, the argument against telling the current conformation as able to understand, while it is not.
 
+\subsection{The value of intelligence}
+
 \section{Appendix. Argument against the Gödelian argument}
 
 In 1961, J. R. Lucas presents the Gödelian argument against the existence of a "strong" AI. His proof is based on Gödel theorem, which is stated as followed:
@@ -521,5 +535,7 @@ However, if the converse situation happens, where we cannot totally perceive wha
     \item The mind is an entity of which is inherently different from the logic of formal system.
 \end{itemize}
 Those fundamental, overlapping assumptions make up the bulk of the Gödelian argument, from the surface. However, is that true of all the merit? \footnote{It turns out, however, the Gödelian argument has various proponents and opponents, and there are arguments of it being false. See \cite{cogprints553} for such argument, but it can be simplified as this. The Gödelian argument makes use of two assumptions: $G(F')$ is true for a Gödelian statement, and $F'\not\vdash G(F')$ for $F'\not \vdash G(F')$ for $F'$ being "I am $F$" with added semantic. Then, the statement on $G(F')$ is true is nothing but a \textit{satisfaction} claim, of meta-mathematical assertion which can be reduced to $\mathcal{I}\vDash G(F')$ is true for given interpretation $\mathcal{I}$. Thereby, there exists no contradiction thereof.}
+
+
 
 \end{document}
